--- a/training.ipynb
+++ b/training.ipynb
@@ -388,14 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 64/150 [===========>..................] - ETA: 0s"
+      "150/150 [==============================] - 1s 4ms/step\n",
+      "\n",
+      "Loss = 0.04677885767072439\n",
+      "Test Accuracy = 97.99999976158142 %\n"
      ]
     }
    ],
